--- a/default-container-index.html
+++ b/default-container-index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
   <title>欢迎访问谭凯雄的博客</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
@@ -40,7 +40,7 @@
           <a href="resume.htm" >我的简历</a>
         </li>
         <li>
-          <a href="photo.htm" >一些图片</a>
+          <a href="photo.htm" >我的相册</a>
         </li>
         <li>
           <a href="archives-list.htm" >随笔-小说</a>
@@ -115,7 +115,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <a href="photo.htm" class="contentDiv1" >
         <h2>
           <span>My Photo</span>
-          一些图片
+          我的相册
         </h2>
         <div class="list">
           小时代
@@ -215,7 +215,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
           <h2>最新观点</h2>
 
           <div class="content">
-            One day you will become who you want to be。有梦xiang,有理xiang,有思xiang,有坚持,怀抱激情,总有一天我会成为我xiang成为的人...
+            One day you will become who you want to be。有梦想，有理想，有思想，有坚持，怀抱激情，总有一天我会成为我想成为的人...
           </div>
 
         </a>
