--- a/about.htm
+++ b/about.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <!-- saved from url=(0080)http://www.perdesigncn.com/index.php?m=content&c=index&f=lists&catid=37&atype=19 -->
 
 <html lang="zh-cn">
