--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="zh-cn">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>欢迎访问谭凯雄的博客</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
