--- a/archives-list.htm
+++ b/archives-list.htm
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-
-<html lang="zh-cn">
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=GBK" />
-	<title>青春末命名-小说</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
 	<base >
