--- a/default-container-index.html
+++ b/default-container-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
   <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
   <title>欢迎访问谭凯雄的博客</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
