--- a/photo.htm
+++ b/photo.htm
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<!-- saved from url=(0070)http://www.perdesigncn.com/index.php?m=content&c=index&f=lists&catid=3 -->
-
-<html lang="zh-cn">
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
   <title>成长的记录</title>
