--- a/_default-container-index.html
+++ b/_default-container-index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-
+<!DOCTYPE html>
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=GBK">
+  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
 	<title>测试</title>
 	<link rel="stylesheet" type="text/css" href="http://static.zend.com/devcloud/style/nimbus.css" />
 	<style type="text/css">
