--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-
-<html lang="zh-cn">
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
   <title>»¶Ó­·ÃÎÊÌ·¿­ÐÛµÄ²©¿Í</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
