--- a/resume.htm
+++ b/resume.htm
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0071)http://www.perdesigncn.com/index.php?m=content&c=index&f=lists&catid=51 -->
-
-<html lang="zh-cn">
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
 	<title>个人简历</title>
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
