--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
-<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
+<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
   <title>欢迎访问谭凯雄的博客</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
