--- a/website.htm
+++ b/website.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
-<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
+<html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
 	<title>品牌网站定制</title>
