--- a/resume.htm
+++ b/resume.htm
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
-	<title>¸öÈË¼òÀú</title>
+	<title>ä¸ªäººç®€å†</title>
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
 	<base >
@@ -31,34 +31,34 @@
 		<div class="fl nav">
 			<ul>
 				<li>
-					<a href="default-container-index.html"  >Ê×Ò³</a>
+					<a href="default-container-index.html"  >é¦–é¡µ</a>
 				</li>
 				<li>
-					<a href="http://www.tankaixiong.cn/blog" target="_blank" >ÎÒµÄ¼¼Êõ²©¿Í</a>
+					<a href="http://www.tankaixiong.cn/blog" target="_blank" >æˆ‘çš„æŠ€æœ¯åšå®¢</a>
 				</li>
 				<li>
-					<a href="http://www.tankaixiong.cn/java/java.htm"  >JAVAµ¼º½</a>
+					<a href="http://www.tankaixiong.cn/java/java.htm"  >JAVAå¯¼èˆª</a>
 				</li>
 				<li>
-					<a href="resume.htm" >ÎÒµÄ¼òÀú</a>
+					<a href="resume.htm" >æˆ‘çš„ç®€å†</a>
 				</li>
 				<li>
-					<a href="photo.htm" >Ò»Ğ©Í¼Æ¬</a>
+					<a href="photo.htm" >ä¸€äº›å›¾ç‰‡</a>
 				</li>
 				<li>
-					<a href="archives-list.htm" >Ëæ±Ê-Ğ¡Ëµ</a>
+					<a href="archives-list.htm" >éšç¬”-å°è¯´</a>
 				</li>
 				<li>
-					<a href="about.htm">¹ØÓÚÎÒ</a>
+					<a href="about.htm">å…³äºæˆ‘</a>
 				</li>
 
 			</ul>
 		</div>
 		<div class="fr topRight">
 			<div style="padding-top:10px;">
-				<a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">±±¾©</a>
-				<a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ÉÏº£</a>
-				<a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ÉîÛÚ</a>
+				<a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">åŒ—äº¬</a>
+				<a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ä¸Šæµ·</a>
+				<a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">æ·±åœ³</a>
 			</div>
 			<div class="tel">
 				<a href="#">
@@ -89,20 +89,20 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 	<div class="lNav">
 		<ul>
 			<li>
-				<a href="#baseinfo"  >»ù±¾×ÊÁÏ</a>
+				<a href="#baseinfo"  >åŸºæœ¬èµ„æ–™</a>
 			</li>
 			<li>
-				<a href="#jobintension"  >ÇóÖ°Ö°Î»</a>
+				<a href="#jobintension"  >æ±‚èŒèŒä½</a>
 			</li>
 
 			<li>
-				<a href="#workexperience"  >¹¤×÷¾­Ñé</a>
+				<a href="#workexperience"  >å·¥ä½œç»éªŒ</a>
 			</li>
 			<li>
-				<a href="#education"  >½ÌÓı¾­Àú</a>
+				<a href="#education"  >æ•™è‚²ç»å†</a>
 			</li>
 			<li>
-				<a href="#itskill"  >IT¼¼ÄÜ</a>
+				<a href="#itskill"  >ITæŠ€èƒ½</a>
 			</li>
 
 		</ul>
@@ -123,7 +123,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			</p>
 			<p>
 				<span style="font-family:Microsoft YaHei;font-size:32px;">
-					¸öÈË¼òÀú
+					ä¸ªäººç®€å†
 					<span style="background-color:#FFFFFF;font-size:18px;color:#CCCCCC;">Resume</span>
 					<span style="background-color:#FFFFFF;font-size:18px;color:#CCCCCC;"></span>
 					<span style="background-color:#FFFFFF;font-size:18px;color:#CCCCCC;"></span>
@@ -142,7 +142,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				<br />
 			</p>
 			<p>
-				<span id="baseinfo" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-»ù±¾×ÊÁÏ-</span>
+				<span id="baseinfo" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-åŸºæœ¬èµ„æ–™-</span>
 			</p>
 			<hr />
 			<p>
@@ -160,11 +160,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			</p>
 			<!--
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-ËµÃ÷-</span>
+				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-è¯´æ˜-</span>
 			</p>
 			-->
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:16px;">Ôİ²»¹«¿ª</span>
+				<span style="font-family:Microsoft YaHei;font-size:16px;">æš‚ä¸å…¬å¼€</span>
 			</p>
 			<p>
 				<span style="font-family:Microsoft YaHei;"></span>
@@ -175,7 +175,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				</span>
 			</p>
 			<p>
-				<span id="jobintension" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-ÇóÖ°Ö°Î»-</span>
+				<span id="jobintension" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-æ±‚èŒèŒä½-</span>
 			</p>
 			<hr />
 			<p>
@@ -193,11 +193,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			</p>
 			<!--
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-ËµÃ÷-</span>
+				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-è¯´æ˜-</span>
 			</p>
 			-->
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:16px;">Ôİ²»¹«¿ª</span>
+				<span style="font-family:Microsoft YaHei;font-size:16px;">æš‚ä¸å…¬å¼€</span>
 			</p>
 			<p>
 				<span style="font-family:Microsoft YaHei;"></span>
@@ -208,7 +208,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				</span>
 			</p>
 			<p>
-				<span id="workexperience" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-¹¤×÷¾­Ñé-</span>
+				<span id="workexperience" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-å·¥ä½œç»éªŒ-</span>
 			</p>
 			<hr />
 			<p>
@@ -226,11 +226,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			</p>
 			<!--
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-ËµÃ÷-</span>
+				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-è¯´æ˜-</span>
 			</p>
 			-->
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:16px;">Ôİ²»¹«¿ª</span>
+				<span style="font-family:Microsoft YaHei;font-size:16px;">æš‚ä¸å…¬å¼€</span>
 			</p>
 			<p>
 				<span style="font-family:Microsoft YaHei;"></span>
@@ -241,7 +241,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				</span>
 			</p>
 			<p>
-				<span id="education" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-½ÌÓı¾­Àú-</span>
+				<span id="education" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-æ•™è‚²ç»å†-</span>
 			</p>
 			<hr />
 			<p>
@@ -259,11 +259,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			</p>
 			<!--
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-ËµÃ÷-</span>
+				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-è¯´æ˜-</span>
 			</p>
 			-->
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:16px;">Ôİ²»¹«¿ª</span>
+				<span style="font-family:Microsoft YaHei;font-size:16px;">æš‚ä¸å…¬å¼€</span>
 			</p>
 			<p>
 				<span style="font-family:Microsoft YaHei;"></span>
@@ -274,7 +274,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				</span>
 			</p>
 			<p>
-				<span id="itskill" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-IT¼¼ÄÜ-</span>
+				<span id="itskill" style="font-family:Microsoft YaHei;font-size:18px;background-color:#E53333;color:#FFFFFF;">-ITæŠ€èƒ½-</span>
 			</p>
 			<hr />
 			<p>
@@ -292,11 +292,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			</p>
 			<!--
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-ËµÃ÷-</span>
+				<span style="font-family:Microsoft YaHei;font-size:14px;background-color:#E53333;color:#FFFFFF;">-è¯´æ˜-</span>
 			</p>
 			-->
 			<p>
-				<span style="font-family:Microsoft YaHei;font-size:16px;">Ôİ²»¹«¿ª</span>
+				<span style="font-family:Microsoft YaHei;font-size:16px;">æš‚ä¸å…¬å¼€</span>
 			</p>
 			<p>
 				<span style="font-family:Microsoft YaHei;"></span>
@@ -316,7 +316,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 	</div>
 	<div class="foot3">
     <div class="fl">
-      ÆóÒµÆ·ÅÆÍøÕ¾¼¼Êõ¹ËÎÊÓëÉè¼Æ   Copyright 
+      ä¼ä¸šå“ç‰Œç½‘ç«™æŠ€æœ¯é¡¾é—®ä¸è®¾è®¡   Copyright 
 ? 2001-2012 www.tankaixiong.cn all rights
       <br/>
       reserved. 
