--- a/default-container-index.html
+++ b/default-container-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>  
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
-<head>
+<head>   
   <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
-  <title>»¶Ó­·ÃÎÊÌ·¿­ĞÛµÄ²©¿Í</title>
+  <title>æ¬¢è¿è®¿é—®è°­å‡¯é›„çš„åšå®¢</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
   <LINK href="system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel=icon>
@@ -28,25 +28,25 @@
     <div class="fl nav">
       <ul>
         <li>
-          <a href="default-container-index.html"  >Ê×Ò³</a>
+          <a href="default-container-index.html"  >é¦–é¡µ</a>
         </li>
         <li>
-          <a href="http://www.tankaixiong.cn/blog" target="_blank" >ÎÒµÄ¼¼Êõ²©¿Í</a>
+          <a href="http://www.tankaixiong.cn/blog" target="_blank" >æˆ‘çš„æŠ€æœ¯åšå®¢</a>
         </li>
         <li>
-		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVAµ¼º½</a>
+		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVAå¯¼èˆª</a>
 		</li>
         <li>
-          <a href="resume.htm" >ÎÒµÄ¼òÀú</a>
+          <a href="resume.htm" >æˆ‘çš„ç®€å†</a>
         </li>
         <li>
-          <a href="photo.htm" >ÎÒµÄÏà²á</a>
+          <a href="photo.htm" >æˆ‘çš„ç›¸å†Œ</a>
         </li>
         <li>
-          <a href="archives-list.htm" >Ëæ±Ê-Ğ¡Ëµ</a>
+          <a href="archives-list.htm" >éšç¬”-å°è¯´</a>
         </li>
         <li>
-          <a href="about.htm">¹ØÓÚÎÒ</a>
+          <a href="about.htm">å…³äºæˆ‘</a>
         </li>
         
 
@@ -54,9 +54,9 @@
     </div>
     <div class="fr topRight">
       <div style="padding-top:10px;">
-        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">±±¾©</a>
-        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ÉÏº£</a>
-        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ÉîÛÚ</a>
+        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">åŒ—äº¬</a>
+        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ä¸Šæµ·</a>
+        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">æ·±åœ³</a>
       </div>
       <div class="tel">
         <a href="#">
@@ -90,16 +90,16 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <a href="http://www.tankaixiong.cn/blog" class="contentDiv1" >
         <h2>
           <span>The programmer blog</span>
-          ´¿´âµÄ¼¼Êõ²©¿Í
+          çº¯ç²¹çš„æŠ€æœ¯åšå®¢
         </h2>
         <div class="list">
           JAVA
           <br/>
           ANDROID
           <br/>
-          WEB¼¼Êõ
+          WEBæŠ€æœ¯
           <br/>
-          ÍøÒ³ÓÎÏ·¿ª·¢
+          ç½‘é¡µæ¸¸æˆå¼€å‘
         </div>
       </a>
       <div class="contentDiv" style="background:#139BEF; filter: Alpha(Opacity=30);display:block;"></div>
@@ -115,14 +115,14 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <a href="photo.htm" class="contentDiv1" >
         <h2>
           <span>My Photo</span>
-          ÎÒµÄÏà²á
+          æˆ‘çš„ç›¸å†Œ
         </h2>
         <div class="list">
-          Ğ¡Ê±´ú
+          å°æ—¶ä»£
           <br />
-          ËêÔÂÊÇ°ÑÉ±ÖíµÄµ¶
+          å²æœˆæ˜¯æŠŠæ€çŒªçš„åˆ€
           <br />
-          ³ÌĞòÔ³µÄÈÕ×Ó
+          ç¨‹åºçŒ¿çš„æ—¥å­
           <br />
               
         </div>
@@ -140,16 +140,16 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <a href="#" class="contentDiv1" >
         <h2>
           <span>My Novel</span>
-          ÎÒµÄĞ¡Ëµ
+          æˆ‘çš„å°è¯´
         </h2>
         <div class="list">
-          ³¤ÆªĞ¡Ëµ
+          é•¿ç¯‡å°è¯´
           <br />
-          Ëæ±ÊĞÄÇé
+          éšç¬”å¿ƒæƒ…
           <br />
-          Âë×Ö
+          ç å­—
           <br />
-          ÁãËéµÄÎÄ×Ö
+          é›¶ç¢çš„æ–‡å­—
         </div>
       </a>
       <div class="contentDiv" style="background:#50c6cd; filter: Alpha(Opacity=30);display:block;"></div>
@@ -165,16 +165,16 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <a href="#" class="contentDiv1" >
         <h2>
           <span>About Me</span>
-          ¹ØÓÚÎÒ
+          å…³äºæˆ‘
         </h2>
         <div class="list">
-          ÓÊÏä
+          é‚®ç®±
           <br />
-          Î¢²©
+          å¾®åš
           <br />
-          ¼¼Êõ²©¿Í
+          æŠ€æœ¯åšå®¢
           <br />
-          ÁªÏµ·½Ê½
+          è”ç³»æ–¹å¼
         </div>
       </a>
       <div class="contentDiv" style="background:#aa671f; filter: Alpha(Opacity=30);display:block;"></div>
@@ -191,7 +191,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         <!--      <a href="indexsingle/experiencecenter/" class="indexNews">
         -->
         <a href="http://www.tankaixiong.cn/blog/archives/category/actionscript" target="_blank" class="indexNews">
-          <h2>flahÍøÒ³ÓÎÏ·</h2>
+          <h2>flahç½‘é¡µæ¸¸æˆ</h2>
           <div class="imgDiv">
             <img src="system/templates/pinwu/images/flash.png" />
           </div>
@@ -212,10 +212,10 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="divContent">
 
         <a href="#" class="indexNews">
-          <h2>×îĞÂ¹Ûµã</h2>
+          <h2>æœ€æ–°è§‚ç‚¹</h2>
 
           <div class="content">
-            One day you will become who you want to be¡£ÓĞÃÎÏë£¬ÓĞÀíÏë£¬ÓĞË¼Ïë£¬ÓĞ¼á³Ö£¬»³±§¼¤Çé£¬×ÜÓĞÒ»ÌìÎÒ»á³ÉÎªÎÒÏë³ÉÎªµÄÈË...
+            One day you will become who you want to beã€‚æœ‰æ¢¦æƒ³ï¼Œæœ‰ç†æƒ³ï¼Œæœ‰æ€æƒ³ï¼Œæœ‰åšæŒï¼Œæ€€æŠ±æ¿€æƒ…ï¼Œæ€»æœ‰ä¸€å¤©æˆ‘ä¼šæˆä¸ºæˆ‘æƒ³æˆä¸ºçš„äºº...
           </div>
 
         </a>
@@ -259,8 +259,8 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
             <img src="system/templates/pinwu/images/img90.jpg" />
           </div>
           <div class="fr">
-            <h2 style="cursor:pointer;">ÆóÒµÍøÕ¾½¨Éè</h2>
-            ÆóÒµ½¨Õ¾ . ¸öÈË²©¿Í . ¿Õ¼äÕ¹Ê¾ . Æ·ÅÆÉè¼Æ 
+            <h2 style="cursor:pointer;">ä¼ä¸šç½‘ç«™å»ºè®¾</h2>
+            ä¼ä¸šå»ºç«™ . ä¸ªäººåšå®¢ . ç©ºé—´å±•ç¤º . å“ç‰Œè®¾è®¡ 
           </div>
         </a>
       </div>
@@ -273,8 +273,8 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
             <img src="system/templates/pinwu/images/img90_1.jpg" />
           </div>
           <div class="fr">
-            <h2 style="cursor:pointer;">Æ·ÅÆÕ½ÂÔ</h2>
-            Æ·ÅÆÕ½ÂÔ . ²úÆ·Õ½ÂÔ . Î¢Æ·ÅÆ´î½¨ . ÕûºÏÓë¼ò»¯
+            <h2 style="cursor:pointer;">å“ç‰Œæˆ˜ç•¥</h2>
+            å“ç‰Œæˆ˜ç•¥ . äº§å“æˆ˜ç•¥ . å¾®å“ç‰Œæ­å»º . æ•´åˆä¸ç®€åŒ–
           </div>
         </a>
       </div>
@@ -312,7 +312,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 
   <div class="foot3">
     <div class="fl">
-      ÆóÒµÆ·ÅÆÍøÕ¾¼¼Êõ¹ËÎÊÓëÉè¼Æ   Copyright 
+      ä¼ä¸šå“ç‰Œç½‘ç«™æŠ€æœ¯é¡¾é—®ä¸è®¾è®¡   Copyright 
 ? 2001-2012 www.tankaixiong.cn all rights
       <br/>
       reserved. 
