--- a/photo.htm
+++ b/photo.htm
@@ -3,10 +3,10 @@
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
-  <title>³É³¤µÄ¼ÇÂ¼</title>
+  <title>æˆé•¿çš„è®°å½•</title> 
   <meta name="Keywords" content="" />
   <meta name="Description" content="" />
-  <base >
+  <base >     
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
   <LINK href="system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel=icon>
@@ -31,34 +31,34 @@
     <div class="fl nav">
       <ul>
         <li>
-          <a href="default-container-index.html"  >Ê×Ò³</a>
+          <a href="default-container-index.html"  >é¦–é¡µ</a>
         </li>
         <li>
-          <a href="http://www.tankaixiong.cn/blog" target="_blank" >ÎÒµÄ¼¼Êõ²©¿Í</a>
+          <a href="http://www.tankaixiong.cn/blog" target="_blank" >æˆ‘çš„æŠ€æœ¯åšå®¢</a>
         </li>
         <li>
-		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVAµ¼º½</a>
+		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVAå¯¼èˆª</a>
 		</li>
         <li>
-          <a href="resume.htm" >ÎÒµÄ¼òÀú</a>
+          <a href="resume.htm" >æˆ‘çš„ç®€å†</a>
         </li>
         <li>
-          <a href="photo.htm" >Ò»Ğ©Í¼Æ¬</a>
+          <a href="photo.htm" >ä¸€äº›å›¾ç‰‡</a>
         </li>
         <li>
-          <a href="archives-list.htm" >Ëæ±Ê-Ğ¡Ëµ</a>
+          <a href="archives-list.htm" >éšç¬”-å°è¯´</a>
         </li>
         <li>
-          <a href="about.htm">¹ØÓÚÎÒ</a>
+          <a href="about.htm">å…³äºæˆ‘</a>
         </li>
 
       </ul>
     </div>
     <div class="fr topRight">
       <div style="padding-top:10px;">
-        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">±±¾©</a>
-        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ÉÏº£</a>
-        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ÉîÛÚ</a>
+        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">åŒ—äº¬</a>
+        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">ä¸Šæµ·</a>
+        <a href="#" style="color:#FFFFFF; font-size:14px; padding:25px 5px 5px 5px;">æ·±åœ³</a>
       </div>
       <div class="tel">
         <a href="#">
@@ -90,9 +90,9 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     <ul>
 
       <li>
-        <a href="#" class="content" >Ğ¡Ê±ºòÕÕÆ¬ÃÖ×ãÕä¹ó</br>
+        <a href="#" class="content" >å°æ—¶å€™ç…§ç‰‡å¼¥è¶³çè´µ</br>
       </br>
-      ÎÒºÍÎÒ¸ç
+      æˆ‘å’Œæˆ‘å“¥
     </a>
     <div class="bg"></div>
     <a href="#">
@@ -101,7 +101,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     </a>
   </li>
    <li>
-    <a href="#" class="content" >Ò»Ğ©Í¼Æ¬</a>
+    <a href="#" class="content" >ä¸€äº›å›¾ç‰‡</a>
     <div class="bg"></div>
     <a href="#">
       <div class="img_div" style="background-image:url(images/home/home41.jpg); background-repeat: no-repeat;"></div>
@@ -113,7 +113,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 
   
   <li>
-    <a href="#" class="content" >Ò»Ğ©Í¼Æ¬</a>
+    <a href="#" class="content" >ä¸€äº›å›¾ç‰‡</a>
     <div class="bg"></div>
     <a href="#">
       <div class="img_div" style="background-image:url(images/photo/gf2.jpg); background-repeat: no-repeat;"></div>
@@ -122,7 +122,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
   </li>
 
    <li>
-    <a href="#" class="content" >Ò»Ğ©Í¼Æ¬</a>
+    <a href="#" class="content" >ä¸€äº›å›¾ç‰‡</a>
     <div class="bg"></div>
     <a href="#">
       <div class="img_div" style="background-image:url(images/home/home21.jpg); background-repeat: no-repeat;"></div>
@@ -133,7 +133,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
  
 
   <li>
-    <a href="#" class="content" >Ò»Ğ©Í¼Æ¬</a>
+    <a href="#" class="content" >ä¸€äº›å›¾ç‰‡</a>
     <div class="bg"></div>
     <a href="#">
       <div class="img_div" style="background-image:url(images/photo/gf.jpg); background-repeat: no-repeat;"></div>
@@ -141,7 +141,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     </a>
   </li>
   <li>
-    <a href="#" class="content" >Ò»Ğ©Í¼Æ¬</a>
+    <a href="#" class="content" >ä¸€äº›å›¾ç‰‡</a>
     <div class="bg"></div>
     <a href="#">
       <div class="img_div" style="background-image:url(images/home/home31.jpg); background-repeat: no-repeat;"></div>
@@ -149,7 +149,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     </a>
   </li>
   <li>
-    <a href="#" class="content" >Ò»Ğ©Í¼Æ¬</a>
+    <a href="#" class="content" >ä¸€äº›å›¾ç‰‡</a>
     <div class="bg"></div>
     <a href="#">
       <div class="img_div" style="background-image:url(images/photo/me1.jpg); background-repeat: no-repeat;"></div>
@@ -171,7 +171,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 
 <div class="foot3">
 <div class="fl">
-  ÆóÒµÆ·ÅÆÍøÕ¾¼¼Êõ¹ËÎÊÓëÉè¼Æ   Copyright 
+  ä¼ä¸šå“ç‰Œç½‘ç«™æŠ€æœ¯é¡¾é—®ä¸è®¾è®¡   Copyright 
 ? 2001-2012 www.tankaixiong.cn all rights
   <br/>
   reserved. 
