--- a/java/java.htm
+++ b/java/java.htm
@@ -43,10 +43,10 @@
             <a href="#">.NET导航</a>
           </li>
           <li>
-            <a href="http://www.tankaixiong.cn/blog" target="_blank">博客</a>
+            <a href="/" target="_blank">博客</a>
           </li>
           <li>
-            <a href="http://wwww.tankaixiong.cn"  target="_blank" >
+            <a href="/"  target="_blank" >
               <span>关于我</span>
             </a>
           </li>
