update blog url to cnblogs

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
           <a href="default-container-index.html"  >首页</a>
         </li>
         <li>
-          <a href="http://www.tankaixiong.cn/blog" target="_blank" >我的技术博客</a>
+          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
         </li>
         <li>
-		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
-		</li>
+          <a href="https://github.com/tankaixiong/meme" target="_blank" >游戏后台框架meme</a>
+        </li>
+        <li>
+          <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
+        </li>
         <li>
           <a href="resume.htm" >我的简历</a>
         </li>
@@ -48,7 +51,6 @@
         <li>
           <a href="about.htm">关于我</a>
         </li>
-        
 
       </ul>
     </div>
@@ -83,11 +85,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         <!-- Baidu Button END --> </div>
     </div>
   </div>
-  
+
   <div class="divBox">
 
     <div class="liBox1 indexBox1">
-      <a href="http://www.tankaixiong.cn/blog" class="contentDiv1" >
+      <a href="http://www.cnblogs.com/tankaixiong/" class="contentDiv1" >
         <h2>
           <span>The programmer blog</span>
           纯粹的技术博客
@@ -103,10 +105,10 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         </div>
       </a>
       <div class="contentDiv" style="background:#139BEF; filter: Alpha(Opacity=30);display:block;"></div>
-      <a href="http://www.tankaixiong.cn/blog">
+      <a href="http://www.cnblogs.com/tankaixiong/">
         <img  src="images/home/home11.jpg" class="img0" />
       </a>
-      <a href="http://www.tankaixiong.cn/blog">
+      <a href="http://www.cnblogs.com/tankaixiong/">
         <img src="images/home/home12.jpg" />
       </a>
     </div>
@@ -124,7 +126,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
           <br />
           程序猿的日子
           <br />
-              
+
         </div>
       </a>
       <div class="contentDiv" style="background:#d13ead; filter: Alpha(Opacity=30);display:block;"></div>
@@ -190,7 +192,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="divContent">
         <!--      <a href="indexsingle/experiencecenter/" class="indexNews">
         -->
-        <a href="http://www.tankaixiong.cn/blog/archives/category/actionscript" target="_blank" class="indexNews">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/actionscript" target="_blank" class="indexNews">
           <h2>flah网页游戏</h2>
           <div class="imgDiv">
             <img src="system/templates/pinwu/images/flash.png" />
@@ -199,9 +201,9 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       </div>
       <div class="contentBg"></div>
     </div>
-     <div class="liBox2">
+    <div class="liBox2">
       <div class="divContent">
-        <a href="http://www.tankaixiong.cn/blog/archives/category/linux/centos" target="_blank">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/linux/centos" target="_blank">
           <img src="system/templates/pinwu/images/centos.png" border="0"/>
         </a>
       </div>
@@ -223,12 +225,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       </div>
       <div class="contentBg"></div>
     </div>
-   
 
     <div class="liBox2">
       <div class="divContent">
 
-        <a href="http://www.tankaixiong.cn/blog/archives/category/java">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/java">
           <img src="system/templates/pinwu/images/img180_3.png" />
         </a>
 
@@ -238,7 +239,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 
     <div class="liBox2">
       <div class="divContent">
-        <a href="http://www.tankaixiong.cn/blog/archives/category/android">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/android">
           <img src="system/templates/pinwu/images/android.png" />
         </a>
       </div>
@@ -260,7 +261,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
           </div>
           <div class="fr">
             <h2 style="cursor:pointer;">企业网站建设</h2>
-            企业建站 . 个人博客 . 空间展示 . 品牌设计 
+            企业建站 . 个人博客 . 空间展示 . 品牌设计
           </div>
         </a>
       </div>
@@ -281,45 +282,46 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="contentBg"></div>
     </div>
   </div>
+  <!--
   <div class="foot1">
-    <ul>
-      <li>
-        <div class="divContent">
-          <a href="#">
-            <img src="system/templates/pinwu/images/csharp.png" />
-          </a>
-        </div>
-        <div class="contentBg"></div>
-      </li>
-      <li>
-        <div class="divContent">
-          <a href="#">
-            <img src="system/templates/pinwu/images/aspnet.png" />
-          </a>
-        </div>
-        <div class="contentBg"></div>
-      </li>
-      <li>
-        <div class="divContent">
-          <a href="#">
-            <img src="system/templates/pinwu/images/sql.png" />
-          </a>
-        </div>
-        <div class="contentBg"></div>
-      </li>
-    </ul>
-  </div>
-
-  <div class="foot3">
-    <div class="fl">
-      企业品牌网站技术顾问与设计   Copyright 
+  <ul>
+    <li>
+      <div class="divContent">
+        <a href="#">
+          <img src="system/templates/pinwu/images/csharp.png" />
+        </a>
+      </div>
+      <div class="contentBg"></div>
+    </li>
+    <li>
+      <div class="divContent">
+        <a href="#">
+          <img src="system/templates/pinwu/images/aspnet.png" />
+        </a>
+      </div>
+      <div class="contentBg"></div>
+    </li>
+    <li>
+      <div class="divContent">
+        <a href="#">
+          <img src="system/templates/pinwu/images/sql.png" />
+        </a>
+      </div>
+      <div class="contentBg"></div>
+    </li>
+  </ul>
+</div>
+-->
+<div class="foot3">
+  <div class="fl">
+    企业品牌网站技术顾问与设计   Copyright 
 ? 2001-2012 www.tankaixiong.cn all rights
-      <br/>
-      reserved. 
-Design:PER-DESIGN   
-    </div>
-
-    <span class="clear_f"></span>
+    <br/>
+    reserved. 
+Design:PER-DESIGN
   </div>
+
+  <span class="clear_f"></span>
+</div>
 </body>
 </html>
