--- a/java/java.htm
+++ b/java/java.htm
@@ -29,7 +29,7 @@
   <div id="db-global-nav" class="global-nav">
     <div class="bd">
       <div class="top-nav-info">
-        <a href="http://www.tankaixiong.cn/blog/archives/57#comment">给我留言</a>
+        <a href="http://www.cnblogs.com/tankaixiong">给我留言</a>
       </div>
       <div class="global-nav-items">
         <ul>
