--- a/photo.htm
+++ b/photo.htm
@@ -34,7 +34,7 @@
           <a href="default-container-index.html"  >首页</a>
         </li>
         <li>
-          <a href="http://www.tankaixiong.cn/blog" target="_blank" >我的技术博客</a>
+          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
         </li>
         <li>
 		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
