--- a/about.htm
+++ b/about.htm
@@ -35,7 +35,7 @@
 					<a href="default-container-index.html"  >首页</a>
 				</li>
 				<li>
-					<a href="http://www.tankaixiong.cn/blog" target="_blank" >我的技术博客</a>
+					<a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
 				</li>
 				<li>
 				  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
@@ -149,7 +149,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				<br />
 				<span style="font-size:14px;font-family:Microsoft YaHei;">博客园: <a href="http://www.cnblogs.com/tankaixiong/" target="_blank">tankaixiong</a></span> 
 				<br />
-				<span style="font-size:14px;font-family:Microsoft YaHei;">推荐微信号: <a href="http://www.cnblogs.com/tankaixiong/" target="_blank">english-world</a></span>
+				 
 				 
 			</p>
 			<p>
