--- a/default-container-index.html
+++ b/default-container-index.html
@@ -31,7 +31,7 @@
           <a href="default-container-index.html"  >首页</a>
         </li>
         <li>
-          <a href="http://www.tankaixiong.cn/blog" target="_blank" >我的技术博客</a>
+          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
         </li>
         <li>
 		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
@@ -87,7 +87,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
   <div class="divBox">
 
     <div class="liBox1 indexBox1">
-      <a href="http://www.tankaixiong.cn/blog" class="contentDiv1" >
+      <a href="http://www.cnblogs.com/tankaixiong/" class="contentDiv1" >
         <h2>
           <span>The programmer blog</span>
           纯粹的技术博客
@@ -103,10 +103,10 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         </div>
       </a>
       <div class="contentDiv" style="background:#139BEF; filter: Alpha(Opacity=30);display:block;"></div>
-      <a href="http://www.tankaixiong.cn/blog">
+      <a href="http://www.cnblogs.com/tankaixiong/">
         <img  src="images/home/home11.jpg" class="img0" />
       </a>
-      <a href="http://www.tankaixiong.cn/blog">
+      <a href="http://www.cnblogs.com/tankaixiong/">
         <img src="images/home/home12.jpg" />
       </a>
     </div>
@@ -190,7 +190,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="divContent">
         <!--      <a href="indexsingle/experiencecenter/" class="indexNews">
         -->
-        <a href="http://www.tankaixiong.cn/blog/archives/category/actionscript" target="_blank" class="indexNews">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/actionscript" target="_blank" class="indexNews">
           <h2>flah网页游戏</h2>
           <div class="imgDiv">
             <img src="system/templates/pinwu/images/flash.png" />
@@ -201,7 +201,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     </div>
      <div class="liBox2">
       <div class="divContent">
-        <a href="http://www.tankaixiong.cn/blog/archives/category/linux/centos" target="_blank">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/linux/centos" target="_blank">
           <img src="system/templates/pinwu/images/centos.png" border="0"/>
         </a>
       </div>
@@ -228,7 +228,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     <div class="liBox2">
       <div class="divContent">
 
-        <a href="http://www.tankaixiong.cn/blog/archives/category/java">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/java">
           <img src="system/templates/pinwu/images/img180_3.png" />
         </a>
 
@@ -238,7 +238,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 
     <div class="liBox2">
       <div class="divContent">
-        <a href="http://www.tankaixiong.cn/blog/archives/category/android">
+        <a href="http://www.cnblogs.com/tankaixiong//archives/category/android">
           <img src="system/templates/pinwu/images/android.png" />
         </a>
       </div>
