update index url

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="divContent">
         <!--      <a href="indexsingle/experiencecenter/" class="indexNews">
         -->
-        <a href="http://www.cnblogs.com/tankaixiong//archives/category/actionscript" target="_blank" class="indexNews">
+        <a href="#" target="_blank" class="indexNews">
           <h2>flah网页游戏</h2>
           <div class="imgDiv">
             <img src="system/templates/pinwu/images/flash.png" />
@@ -203,7 +203,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     </div>
     <div class="liBox2">
       <div class="divContent">
-        <a href="http://www.cnblogs.com/tankaixiong//archives/category/linux/centos" target="_blank">
+        <a href="#" target="_blank">
           <img src="system/templates/pinwu/images/centos.png" border="0"/>
         </a>
       </div>
@@ -229,7 +229,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     <div class="liBox2">
       <div class="divContent">
 
-        <a href="http://www.cnblogs.com/tankaixiong//archives/category/java">
+        <a href="#">
           <img src="system/templates/pinwu/images/img180_3.png" />
         </a>
 
@@ -239,7 +239,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 
     <div class="liBox2">
       <div class="divContent">
-        <a href="http://www.cnblogs.com/tankaixiong//archives/category/android">
+        <a href="#">
           <img src="system/templates/pinwu/images/android.png" />
         </a>
       </div>
