--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
         </li>
         <li>
-          <a href="https://github.com/tankaixiong/meme" target="_blank" >游戏后台框架meme</a>
+          <a href="https://github.com/tankaixiong/meme" target="_blank" >游戏服务器架构meme</a>
         </li>
         <li>
           <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
