--- a/default-container-index.html
+++ b/default-container-index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>   
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>欢迎访问谭凯雄的博客</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,7 @@
           <a href="default-container-index.html"  >首页</a>
         </li>
         <li>
-          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
+          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的博客</a>
         </li>
         <li>
 		  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
@@ -110,7 +110,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         <img src="images/home/home12.jpg" />
       </a>
     </div>
-
+    <!--
     <div class="liBox1 indexBox1">
       <a href="photo.htm" class="contentDiv1" >
         <h2>
@@ -135,16 +135,42 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         <img src="images/home/home22.jpg" />
       </a>
     </div>
+    -->
+
+     <div class="liBox1 indexBox1">
+      <a href="https://github.com/tankaixiong/meme" class="contentDiv1" >
+        <h2>
+          <span>Meme</span>
+          游戏服务器框架
+        </h2>
+        <div class="list">
+          高并发下毫秒级响应
+          <br />
+          在型在线即时通信游戏框架
+          <br />
+          多线程并行处理，高性能
+          <br />
+              
+        </div>
+      </a>
+      <div class="contentDiv" style="background:#d13ead; filter: Alpha(Opacity=30);display:block;"></div>
+      <a href="https://github.com/tankaixiong/meme">
+        <img  src="images/home/meme1.jpg" class="img0" />
+      </a>
+      <a href="https://github.com/tankaixiong/meme">
+        <img src="images/home/meme2.jpg" />
+      </a>
+     </div>
+
+
 
     <div class="liBox1 indexBox1">
       <a href="#" class="contentDiv1" >
         <h2>
           <span>My Novel</span>
-          我的小说
+          我的随笔
         </h2>
         <div class="list">
-          长篇小说
-          <br />
           随笔心情
           <br />
           码字
@@ -162,7 +188,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
     </div>
 
     <div class="liBox1 indexBox1">
-      <a href="#" class="contentDiv1" >
+      <a href="about.htm" class="contentDiv1" >
         <h2>
           <span>About Me</span>
           关于我
@@ -178,10 +204,10 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         </div>
       </a>
       <div class="contentDiv" style="background:#aa671f; filter: Alpha(Opacity=30);display:block;"></div>
-      <a href="#">
+      <a href="about.htm">
         <img  src="images/home/home41.jpg" class="img0" />
       </a>
-      <a href="#">
+      <a href="about.htm">
         <img src="images/home/home42.jpg" />
       </a>
     </div>
@@ -256,11 +282,11 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="divContent">
         <a href="#">
           <div class="fl">
-            <img src="system/templates/pinwu/images/img90.jpg" />
+            <img style="width:90px;height:90px;" src="system/templates/pinwu/images/internet.png" />
           </div>
           <div class="fr">
             <h2 style="cursor:pointer;">企业网站建设</h2>
-            企业建站 . 个人博客 . 空间展示 . 品牌设计 
+            企业建站 . 企业管理软件 . 技术支持
           </div>
         </a>
       </div>
@@ -270,17 +296,18 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <div class="divContent">
         <a href="#" >
           <div class="fl">
-            <img src="system/templates/pinwu/images/img90_1.jpg" />
+            <img style="width:90px;height:90px;" src="system/templates/pinwu/images/hero.png" />
           </div>
           <div class="fr">
-            <h2 style="cursor:pointer;">品牌战略</h2>
-            品牌战略 . 产品战略 . 微品牌搭建 . 整合与简化
+            <h2 style="cursor:pointer;">游戏服务器建设</h2>
+            成熟的游戏后台服务器框架 . 大型即时在线游戏 . 无需重启即可动态扩展及维护
           </div>
         </a>
       </div>
       <div class="contentBg"></div>
     </div>
   </div>
+  <!--
   <div class="foot1">
     <ul>
       <li>
@@ -308,7 +335,9 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         <div class="contentBg"></div>
       </li>
     </ul>
-  </div>
+  </div>-->
+
+   
 
   <div class="foot3">
     <div class="fl">
