--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
   <title>欢迎访问谭凯雄的博客</title>
   <link href="system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
   <link href="system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
@@ -46,7 +46,7 @@
           <a href="photo.htm" >一些图片</a>
         </li>
         <li>
-          <a href="archives-list.htm" >随笔-小说</a>
+          <a href="archives-list.htm" >随笔-心情</a>
         </li>
         <li>
           <a href="about.htm">关于我</a>
@@ -142,16 +142,15 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       <a href="#" class="contentDiv1" >
         <h2>
           <span>My Novel</span>
-          我的小说
+          我的随笔
         </h2>
         <div class="list">
-          长篇小说
-          <br />
-          随笔心情
-          <br />
           码字
           <br />
           零碎的文字
+          <br />
+          随笔心情
+         
         </div>
       </a>
       <div class="contentDiv" style="background:#50c6cd; filter: Alpha(Opacity=30);display:block;"></div>
