--- a/java/java.htm
+++ b/java/java.htm
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>JAVA 程序猿的专属导航</title>
   <meta http-equiv="Pragma" content="no-cache" />
   <meta name="keywords" content="java导航,java常用网址" />
