--- a/website.htm
+++ b/website.htm
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html>  
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>品牌网站定制</title>
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
