--- a/about.htm
+++ b/about.htm
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>  
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>关于我一个程序员的思考</title>
 	<meta name="Keywords" content="" />
 	<meta name="Description" content="" />
@@ -143,7 +143,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 				<span style="font-size:14px;font-family:Microsoft YaHei;">新浪微博: <a href="http://weibo.com/u/1764042272" target="_blank">小小的天呀大大的梦xiang</a></span> 
 				<br />
 				<span style="font-size:14px;font-family:Microsoft YaHei;">
-					Email:
+					Email:<a href="mailto:tankaixiong@foxmail.com">&nbsp;tankaixiong@foxmail.com</a> &nbsp;&nbsp;
 					<a href="mailto:tankaixiong@aliyun.com">tankaixiong@aliyun.com</a>
 				</span>
 				<br />
