--- a/photo.htm
+++ b/photo.htm
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head> 
-  <meta http-equiv="Content-Type" content="text/html; charset=GBK" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>成长的记录</title> 
   <meta name="Keywords" content="" />
   <meta name="Description" content="" />
