--- a/java/java.htm
+++ b/java/java.htm
@@ -43,10 +43,10 @@
             <a href="#">.NET导航</a>
           </li>
           <li>
-            <a href="/" target="_blank">博客</a>
+            <a href="http://www.cnblogs.com/tankaixiong/" target="_blank">博客</a>
           </li>
           <li>
-            <a href="/"  target="_blank" >
+            <a href="/about.htm"  target="_blank" >
               <span>关于我</span>
             </a>
           </li>
@@ -75,7 +75,7 @@
             <input type="hidden" name="ie" value="UTF-8" />
             <input type="hidden" name="oe" value="UTF-8" />
             <input type="hidden" name="hl" value="zh-CN" />
-            <input type="hidden" name="client" value="www.tankaixiong.cn" ></fieldset>
+            <input type="hidden" name="client" value="tankaixiong.cn" ></fieldset>
         </form>
       </div>
     </div>
