--- a/about.htm
+++ b/about.htm
@@ -38,7 +38,7 @@
 					<a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
 				</li>
 				<li>
-				  <a href="http://www.tankaixiong.cn/java/java.htm"  >JAVA导航</a>
+				  <a href="java/java.htm"  >JAVA导航</a>
 				</li>
 				<li>
 					<a href="resume.htm" >我的简历</a>
@@ -184,7 +184,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 	<div class="foot3">
     <div class="fl">
       企业品牌网站技术顾问与设计   Copyright 
-? 2001-2012 www.tankaixiong.cn all rights
+? 2001-2012 tankaixiong.cn all rights
       <br/>
       reserved. 
 Design:PER-DESIGN   
