search url update

--- a/java/java.htm
+++ b/java/java.htm
@@ -37,7 +37,7 @@
             <a href="/">首页</a>
           </li>
           <li class="on">
-            <a href="/">JAVA导航</a>
+            <a href="#">JAVA导航</a>
           </li>
           <li>
             <a href="#">.NET导航</a>
@@ -61,13 +61,13 @@
           <a href="#">JAVA导航</a>
         </div>
         <div class="nav-search">
-          <form action="http://www.google.com.hk/search" target="_blank" method="get">
+          <form action="http://www.baidu.com/s" target="_blank" method="get">
             <fieldset>
               <legend>搜索：</legend>
               <!--<label for="inp-query">搜索你要的内容</label>
             -->
             <div class="inp">
-              <input id="inp-query" name="q" size="22" maxlength="60" value="" autocomplete="off" dir="ltr" />
+              <input id="inp-query" name="wd" size="22" maxlength="60"  autocomplete="off" dir="ltr" value="您还有别的选择么？" />
             </div>
             <div class="inp-btn">
               <input type="submit" value="搜索" />
